--- a/polymer/eduke32/Makefile.common
+++ b/polymer/eduke32/Makefile.common
@@ -244,7 +244,7 @@ ifneq ($(LUNATIC),0)
     # symbol names are apparently not exported.
     override LTO=0
 
-    ifneq ($(LUNATIC),0)
+    ifneq ($(CPLUSPLUS),0)
         $(error "Lunatic C++ build not supported")
     endif
 endif
