Fix building on case-sensitive filesystems on OS X, DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5078 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -300,7 +300,7 @@ ifeq ($(PLATFORM),DARWIN)
 
     LIBS += -lFLAC -lvorbisfile -lvorbis -logg -lm \
             -Wl,-framework,Cocoa -Wl,-framework,Carbon -Wl,-framework,OpenGL \
-            -Wl,-framework,CoreMidi -Wl,-framework,AudioUnit \
+            -Wl,-framework,CoreMIDI -Wl,-framework,AudioUnit \
             -Wl,-framework,AudioToolbox -Wl,-framework,IOKit -Wl,-framework,AGL
     ifneq (00,$(DARWIN9)$(DARWIN10))
         LIBS += -Wl,-framework,QuickTime -lm
