Build tools: Fix build. DONT_BUILD.
git-svn-id: http://svn.eduke32.com/eduke32@5119 1a8010ca-5511-0410-912e-c29ae57300e0

--- a/polymer/eduke32/Makefile
+++ b/polymer/eduke32/Makefile
@@ -157,7 +157,7 @@ endif
 
 # Tools
 
-UTIL_OBJS=compat pragmas kplib cache1d compat_tools
+UTIL_OBJS=compat pragmas kplib cache1d crc32 compat_tools
 UTILS=kextract kgroup transpal wad2art wad2map kmd2tool md2tool generateicon cacheinfo arttool givedepth mkpalette unpackssi bsuite
 GAMEUTILS=ivfrate
 DXUTILS=enumdisplay getdxdidf
