--- a/polymer/eduke32/source/sw/rsrc/buildres.rc
+++ b/polymer/eduke32/source/sw/rsrc/buildres.rc
@@ -31,6 +31,44 @@ BEGIN
 	CONTROL "&Always show configuration on start", IDCALWAYSSHOW, "BUTTON", BS_AUTOCHECKBOX | WS_CHILD | WS_VISIBLE | WS_TABSTOP, 118, 116, 140, 8
 END
 
+#define FILEVER        1,9,9,9
+#define PRODUCTVER     1,9,9,9
+#define STRFILEVER     "2.0.0devel\0"
+#define STRPRODUCTVER  "2.0.0devel\0"
+
+VS_VERSION_INFO VERSIONINFO
+ FILEVERSION FILEVER
+ PRODUCTVERSION PRODUCTVER
+ FILEFLAGSMASK 0x3fL
+#ifdef _DEBUG
+ FILEFLAGS 0x3L
+#else
+ FILEFLAGS 0x2L
+#endif
+ FILEOS 0x40004L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "FileDescription", "Mapster32 for VoidSW"
+            VALUE "FileVersion", STRFILEVER
+            VALUE "InternalName", "Mapster32"
+            VALUE "LegalCopyright", "Copyright © 2015 EDuke32 Developers, 1997, 2005 3D Realms Entertainment"
+            VALUE "LegalTrademarks", "Shadow Warrior® is a Registered Trademark of GHI Media LLC."
+            VALUE "OriginalFilename", "voidsw-editor.exe"
+            VALUE "ProductName", "Mapster32"
+            VALUE "ProductVersion", STRPRODUCTVER
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+END
+
 #if defined(_M_X64) || defined(__amd64__) || defined(__x86_64__)
 1 24 "64/manifest.build.xml"
 #else
