--- a/polymer/eduke32/source/sw/rsrc/gameres.rc
+++ b/polymer/eduke32/source/sw/rsrc/gameres.rc
@@ -46,6 +46,44 @@ BEGIN
 	CONTROL "",                IDGDATA, "LISTBOX", LBS_NOINTEGRALHEIGHT | LBS_USETABSTOPS | LBS_SORT | WS_CHILD | WS_BORDER | WS_VISIBLE | WS_TABSTOP, 10, 15, 226, 50
 END
 
+#define FILEVER        1,9,9,9
+#define PRODUCTVER     1,9,9,9
+#define STRFILEVER     "2.0.0devel\0"
+#define STRPRODUCTVER  "2.0.0devel\0"
+
+VS_VERSION_INFO VERSIONINFO
+ FILEVERSION FILEVER
+ PRODUCTVERSION PRODUCTVER
+ FILEFLAGSMASK 0x3fL
+#ifdef _DEBUG
+ FILEFLAGS 0x3L
+#else
+ FILEFLAGS 0x2L
+#endif
+ FILEOS 0x40004L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE "FileDescription", "VoidSW"
+            VALUE "FileVersion", STRFILEVER
+            VALUE "InternalName", "VoidSW"
+            VALUE "LegalCopyright", "Copyright © 2015 EDuke32 Developers, 1997, 2005 3D Realms Entertainment"
+            VALUE "LegalTrademarks", "Shadow Warrior® is a Registered Trademark of GHI Media LLC."
+            VALUE "OriginalFilename", "voidsw.exe"
+            VALUE "ProductName", "VoidSW"
+            VALUE "ProductVersion", STRPRODUCTVER
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+END
+
 #if defined(_M_X64) || defined(__amd64__) || defined(__x86_64__)
 1 24 "64/manifest.game.xml"
 #else
